--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,5 +1,6 @@
 /* =========================
    Base Styles
+   https://www.stitchtools.com/assets/images/contact/contact-banner.jpg
 ========================= */
 body {
   margin: 0;
